--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,1 +1,9 @@
-// TODO
+.container {
+  border: 1px solid green;
+  max-width: 1440px;
+  margin: 0 auto;
+  height: calc(100vh - 10rem);
+
+  text-align: justify;
+  letter-spacing: -0.5px;
+}
