--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,11 +1,11 @@
 .headerContainer {
-  border: 4px solid blue;
+  // border: 4px solid blue;
   max-width: 1440px;
   margin: 0 auto;
 }
 
 .headerContent {
-  border: 1px solid yellow;
+  // border: 1px solid yellow;
   max-width: 1120px;
   height: 6.563rem;
   margin: 0 auto;
