--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,11 +1,11 @@
 .content {
-  border: 1px solid yellow;
+  // border: 1px solid yellow;
   max-width: 1120px;
   margin: 4rem auto;
   padding: 0 1.5rem;
 
   div {
-    border: 1px solid green;
+    // border: 1px solid green;
     max-width: 45rem;
     margin: 0 auto;
 
@@ -61,13 +61,13 @@
 }
 
 .footer {
-  border: 1px solid yellow;
+  // border: 1px solid yellow;
   max-width: 1120px;
   margin: 4rem auto;
   padding: 0 1.5rem;
 
   div {
-    border: 1px solid green;
+    // border: 1px solid green;
     max-width: 45rem;
     margin: 0 auto;
 
