--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,5 +1,5 @@
 .banner {
-  border: 1px solid green;
+  // border: 1px solid green;
   max-width: 1440px;
   margin: 0 auto;
 
@@ -7,7 +7,7 @@
   justify-content: center;
 
   img {
-    border: 1px solid yellow;
+    // border: 1px solid yellow;
     max-width: 100%;
     max-height: 25rem;
     object-fit: cover;
@@ -17,12 +17,12 @@
 }
 
 .contentContainer {
-  border: 1px solid green;
+  // border: 1px solid green;
   max-width: 1440px;
   margin: 0 auto;
 
   main {
-    border: 1px solid yellow;
+    // border: 1px solid yellow;
     max-width: 721px;
     margin: 5rem auto;
 
