--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,5 +1,5 @@
 .container {
-  border: 1px solid green;
+  // border: 1px solid green;
   max-width: 1440px;
   margin: 0 auto;
   height: calc(100vh - 10rem);
